# mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: CMakeLists.txt  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
lib/include/: MprpcChannel.h  RpcProvider.h  config.h  copyable.h  lockqueue.h  zookeeperutils.h
src/: CMakeLists.txt  Logger.cc  MprpcApplication.cc  MprpcChannel.cc  MprpcController.cc  RpcProvider.cc  config.cc  rpcheader.proto  zookeeperutils.cc
src/include/: Logger.h  MprpcApplication.h  MprpcController.h  RpcProvider.h  noncopyable.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
